# Distributed-Server

./: .gitignore  README.md  START.sql
ChatServer/: ChatServer.sln
ChatServer/ChatServer/: AsioIOServicePool.cpp  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MsgNode.h  MysqMgr.cpp  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  UserMgr.cpp  UserMgr.h  data.h  preh.h
ChatServer/ChatServer/config/: conf.properties
ChatServer/ChatServer/util/: Properties.cpp
ChatServer/ChatServer/x64/Debug/: ChatServer.exe.recipe  ChatServer.vcxproj.FileListAbsolute.txt
START/: AuthMgr.cpp  AuthMgr.h  CMakeLists.txt  CMakeUserPresets.json  ClickedLabel.cpp  ClickedLabel.h  Device.cpp  Device.h  START.cpp  START.sln  START.vcxproj  TimerBtn.cpp  TimerBtn.h  UserMgr.cpp  UserMgr.h  customWidgets.cpp  global.h  httpmgr.cpp  loginDialog.h  main.cpp  singleton.h
START/START/: Device.cpp  START.cpp  START.h  START.ui  START.vcxproj  START.vcxproj.filters  UserMgr.cpp  UserMgr.h  customWidgets.h  global.cpp  httpmgr.cpp  httpmgr.h  loginDialog.cpp  loginDialog.ui  main.cpp  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  tcpMgr.cpp  tcpMgr.h
START/START/MeshView/: MeshView.cpp  MeshView.h  MeshView.ui
START/START/MeshView/TopologyStructure/: bcc_lattice.stl
START/START/x64/Debug/: START.exe.recipe
START/START/x64/Debug/moc/: moc_ClickedLabel.cpp  moc_START.cpp  moc_UserMgr.cpp  moc_aaa.cpp  moc_customWidgets.cpp  moc_httpmgr.cpp  moc_loginDialog.cpp  moc_registerdialog.cpp  moc_tcpMgr.cpp
START/START/x64/Debug/qmake/: qtvars_x64_Debug.props
START/START/x64/Debug/qmake/temp/: props.txt  qtvars.vcxproj
START/START/x64/Debug/qt/: qtvars.xml
START/START/x64/Debug/qt/moc/: moc_ClickedLabel.cpp  moc_MeshView.cpp  moc_START.cpp  moc_UserMgr.cpp  moc_customWidgets.cpp  moc_httpmgr.cpp  moc_loginDialog.cpp  moc_registerdialog.cpp  moc_tcpMgr.cpp
START/START/x64/Debug/qt/qmake/: qtvars.pro  qtvars.vcxproj  qtvars.xml
START/START/x64/Debug/qt/uic/: ui_MeshView.h  ui_loginDialog.h
START/START/x64/Debug/uic/: ui_registerdialog.h
START/START/x64/Release/: START.exe.recipe
START/START/x64/Release/moc/: moc_START.cpp
START/START/x64/Release/qmake/temp/: qtvars.vcxproj  qtvars_x64_Release.props
START/START/x64/Release/rcc/: qrc_START.cpp
START/START/x64/Release/uic/: ui_START.h
START/certs/: server.crt
START/config/: conf.properties
START/style/: stylesheet.qss
START/util/: CMakeLists.txt  Properties.cpp  Properties.h
Server/: GateServer.sln  version.txt
Server/Server/: GateServer.cpp  Gateserver.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqMgr.cpp  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Server.vcxproj  Server.vcxproj.filters  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  main.cpp  message.pb.cc  message.pb.h  message.proto  preh.h
Server/Server/certs/: private.key  server.csr
Server/Server/util/: Properties.cpp
Server/Server/x64/Debug/: GateServer.exe.recipe  Server.exe.recipe  Server.vcxproj.FileListAbsolute.txt
Server/x64/Debug/: conf.properties
Server/x64/Debug/config/: conf.properties
StatusServer/: StatusServer.sln
StatusServer/StatusServer/: AsioIOServicePool.h  ChatGrpcClient.cpp  ChatGrpcClient.h  GenerateGRPCcode.bat  MysqMgr.cpp  MysqlDao.cpp  MysqlDao.h  MysqlMgr.h  StatusServer.cpp  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.proto  preh.h
StatusServer/StatusServer/config/: conf.properties
StatusServer/StatusServer/util/: Properties.h
StatusServer/StatusServer/x64/Debug/: StatusServer.exe.recipe  StatusServer.vcxproj.FileListAbsolute.txt
VarifyServer/: config.json  server.js
test/: CMakeLists.txt  Device.cpp  Device.h  login.cpp  login.h  login.ui  main.cpp
